--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="initialize()">
     <h1>The Game of Life</h1>
     <table id="gameBoard">
-        <tr>
+        <tr><!-- first row -->
             <td></td>
             <td></td>
             <td class="alive"></td>
@@ -23,7 +23,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr> <!-- second row -->
             <td class="alive"></td>
             <td></td>
             <td class="alive"></td>
@@ -35,7 +35,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr><!-- third row -->
             <td></td>
             <td class="alive"></td>
             <td class="alive"></td>
