--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <tr><!-- first row -->
             <td></td>
             <td></td>
-            <td class="alive"></td>
+            <td class="alive"></td><!-- "alive" makes cells black -->
             <td></td>
             <td></td>
             <td></td>
@@ -47,7 +47,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr><!-- 4th row -->
             <td></td>
             <td></td>
             <td></td>
@@ -59,7 +59,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr> <!-- 5th row -->
             <td></td>
             <td></td>
             <td></td>
@@ -71,7 +71,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr><!-- 6th row-->
             <td></td>
             <td></td>
             <td></td>
@@ -83,7 +83,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr><!-- 7th row-->
             <td></td>
             <td></td>
             <td></td>
@@ -95,7 +95,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr> <!-- 8th row-->
             <td></td>
             <td></td>
             <td></td>
@@ -107,7 +107,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr><!-- 9th row -->
             <td></td>
             <td></td>
             <td></td>
@@ -119,7 +119,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr> <!-- 10th row-->
             <td></td>
             <td></td>
             <td></td>
